todo-spring-quarkus/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-quarkus
  name: todo-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-quarkus
  template:
    metadata:
      labels:
        app: todo-quarkus
    spec:
      containers:
        - image: PIPELINE_REPLACE:latest
          imagePullPolicy: Always
          name: todo-quarkus
          resources:
            limits:
              memory: "512Mi"
              cpu: "60m"  
            requests:
              memory: "128Mi"
              cpu: "30m"
          ports:
            - containerPort: 8080
              protocol: TCP
