todo-spring-quarkus/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo-spring-quarkus
  name: todo-spring-quarkus
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: todo-spring-quarkus
    weight: 100
